# flappybird_canvas_by_rust_wasm

./: .gitignore  Cargo.toml  README.md  index.css  index.html  tsconfig.json
src/: Bird.rs  Game.rs  bird.rs  draw.rs  game.rs  land.rs  lib.rs  main.rs  pipe.rs  sky.rs
src_ts/: Game.ts  gameOver.ts  main.ts  pause.ts
src_ts/Router/: router.ts
src_ts/State/: gameState.ts
src_ts/components/: gameContainer.ts  gameOver.ts  gamePause.ts  gameStart.ts
src_ts/utils/: Router.ts
