[package]
name = "flappybird_canvas_by_rust_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.95"
console_error_panic_hook = "0.1.7" #wasm调试钩子
console_log = "1.0.0" # rust错误映射为浏览器控制台日志
log = "0.4" # rust错误映射为浏览器控制台日志
js-sys = "0.3"
web-sys = { version = "0.3.70", features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'console',
  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'HtmlImageElement',
  'Event',
  'MouseEvent',
  "Performance",
] }
